make tests all work nice