@@ -12,3 +12,14 @@ dependencies {
   annotationProcessor 'com.palantir.dialogue:dialogue-annotations'
   annotationProcessor 'org.immutables:value'
 }
+
+
+tasks.withType(JavaCompile) {
+  options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+  jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+  jvmArgs += "--enable-preview"
+}
